@@ -2920,6 +2920,310 @@ literal|"//str[@name='id'][.='146']"
 argument_list|)
 expr_stmt|;
 block|}
+comment|// test phrase fields including pf2 pf3 and phrase slop
+DECL|method|testPfPs
+specifier|public
+name|void
+name|testPfPs
+parameter_list|()
+block|{
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"s0"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"foo bar a b c"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"1.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"s1"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"foo a bar b c"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"2.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"s2"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"foo a b bar c"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"3.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"s3"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"foo a b c bar"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"4.0"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertU
+argument_list|(
+name|commit
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"default order assumption wrong"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"foo bar"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s3']"
+argument_list|,
+literal|"//doc[2]/str[@name='id'][.='s2']"
+argument_list|,
+literal|"//doc[3]/str[@name='id'][.='s1']"
+argument_list|,
+literal|"//doc[4]/str[@name='id'][.='s0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"pf not working"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"foo bar"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"pf"
+argument_list|,
+literal|"phrase_sw^10"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"pf2 not working"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"foo bar"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"pf2"
+argument_list|,
+literal|"phrase_sw^10"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"pf3 not working"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"a b bar"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"pf3"
+argument_list|,
+literal|"phrase_sw^10"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s2']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"ps not working for pf2"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"bar foo"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"pf2"
+argument_list|,
+literal|"phrase_sw^10"
+argument_list|,
+literal|"ps"
+argument_list|,
+literal|"2"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s0']"
+argument_list|)
+expr_stmt|;
+name|assertQ
+argument_list|(
+literal|"ps not working for pf3"
+argument_list|,
+name|req
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"a bar foo"
+argument_list|,
+literal|"qf"
+argument_list|,
+literal|"phrase_sw"
+argument_list|,
+literal|"pf3"
+argument_list|,
+literal|"phrase_sw^10"
+argument_list|,
+literal|"ps"
+argument_list|,
+literal|"3"
+argument_list|,
+literal|"bf"
+argument_list|,
+literal|"boost_d"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score,*"
+argument_list|,
+literal|"debugQuery"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"defType"
+argument_list|,
+literal|"edismax"
+argument_list|)
+argument_list|,
+literal|"//doc[1]/str[@name='id'][.='s1']"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
